# taio_graphs

./: .gitignore  CMakeLists.txt  README.txt  graph.cpp  graph.h  graph_runner.cpp  graph_runner.h  main.cpp  max_clique_approx.cpp  max_clique_approx.h  test_clique_3.txt  test_graph.txt  test_two_cliques.txt
taio_console/: CMakeLists.txt  main.cpp
taio_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
taio_lib/: CMakeLists.txt  graph.cpp  graph.h  graph_runner.cpp  graph_runner.h
